--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,5 @@
 name: "FAP: Build and lint"
-on: [push]
-
+on: [push, pull_request]
 jobs:
   ufbt-build-action:
     runs-on: ubuntu-latest
@@ -14,7 +13,8 @@ jobs:
         with:
           sdk-channel: dev
       - name: Upload app artifacts
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
           name: build-output
           path: ${{ steps.build-app.outputs.fap-artifacts }}
+
