--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,4 +24,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: smart_portail_tool.fap
-          path: ~/.ufbt/build/smart_portail_tool.fap
+          path: ${{ steps.build.outputs.fap-artifacts }}
+
