--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
 
       - name: Build with ufbt
         uses: flipperdevices/flipperzero-ufbt-action@v0.1
-        id: build
+        id: build-app
         with:
           sdk-channel: release
           app-dir: applications_user/smart_portail_tool
@@ -22,4 +22,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: smart_portail_tool.fap
-          path: ${{ steps.build.outputs.fap-artifacts }}
+          path: ${{ steps.build-app.outputs.fap-artifacts }}
+
