--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,11 +9,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Build with ufbt
         uses: flipperdevices/flipperzero-ufbt-action@v0.1
-        id: build-app
+        id: build
         with:
           sdk-channel: release
           app-dir: applications_user/smart_portail_tool
@@ -22,4 +22,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: smart_portail_tool.fap
-          path: ${{ steps.build-app.outputs.fap-artifacts }}
+          path: ${{ steps.build.outputs.fap-artifacts }}
